Added Instructor Image to Hello World

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <body>
 
   <h1>Hello world!</h1>
+  <hr>
   <p>This is the first file in my new Git Repo.</p>
-
+  <br>
+  <p>Here is what my instructor looks like:</p>
+  <img src="Felix Avatar.jpg" alt="Image of my instructor" style="width:174px; height:192px;">
+  
 </body>
 </html>
